# CW4

./: .env.sample  groups.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: sent_letter.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_receivemail_options.py  0002_initial.py  0003_alter_mailing_options.py  0003_receivemail_is_active_receivemail_owner.py  0004_alter_message_options_message_owner.py  0005_mailing_is_active.py  0006_attemptmailing_owner.py  0007_alter_mailing_end_sending_and_more.py  0008_alter_mailing_client_alter_mailing_is_active_and_more.py  0009_alter_mailing_client.py  0010_mailing_owner.py
mailing/templates/includes/: main_menu.html
mailing/templates/mailing/: contacts.html  mailing_delete.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_list.html  receivemail_form.html  receivemail_list.html  send_mail.html
users/: admin.py  forms.py  models.py  service.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html
users/templates/users/: user_lists.html
